RDAPI-30705 Remove Cassandra GC known issue (#2736)